# sine-web-auth-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  justfile  pyproject.toml
app/: main.py
app/core/: db.py  templates.py  time.py
app/models/: user.py
app/routers/: api.py  auth.py  pages.py  profile.py
app/schemas/: api.py
app/services/: auth.py  validation.py
app/static/: style.css
app/templates/: base.html  login.html  profile.html  signup.html
app/templates/includes/: footer.html  header.html  login_form.html  signup_form.html  username_feedback.html
nginx/: default.conf
