[project]
name = "sine-web"
version = "0.1.0"
description = "FastAPI SSR auth demo"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pwdlib[argon2]>=0.2.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
